Initial merge of mega2560 to platformio.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ src_filter = +<blend/>
 lib_use = SPI,EEPROM
 lib_dfcyclic = True
 lib_install = 431,332
-
+lib_ignore = BLEPeripheral_ID259
 
 [env:101]
 platform = intel_arc32
@@ -33,4 +33,13 @@ framework = arduino
 board = genuino101
 src_filter = +<arduino101/>
 lib_install = 431
-lib_ignore = Nordic_nRF8001,GoosciBleGatt
+lib_ignore = Nordic_nRF8001,GoosciBleGatt,BLEPeripheral_ID259
+
+[env:mega2560]
+platform = atmelavr
+framework = arduino
+board = megaatmega2560
+src_filter = +<arduinoMega2560/>
+lib_use = SPI,EEPROM
+lib_dfcyclic = True
+lib_install = 259
