Add uno support.

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,3 +43,13 @@ src_filter = +<arduinoMega2560/>
 lib_use = SPI,EEPROM
 lib_dfcyclic = True
 lib_install = 259
+
+
+[env:uno]
+platform = atmelavr
+framework = arduino
+board = uno
+src_filter = +<arduinoUno/>
+lib_use = SPI,EEPROM
+lib_dfcyclic = True
+lib_install = 259
