--- a/platformio.ini
+++ b/platformio.ini
@@ -39,7 +39,7 @@ lib_ignore = Nordic_nRF8001,GoosciBleGatt,BLEPeripheral_ID259
 platform = atmelavr
 framework = arduino
 board = megaatmega2560
-src_filter = +<arduinoMega2560/>
+src_filter = +<arduino/>
 lib_use = SPI,EEPROM
 lib_dfcyclic = True
 lib_install = 259
@@ -49,7 +49,7 @@ lib_install = 259
 platform = atmelavr
 framework = arduino
 board = uno
-src_filter = +<arduinoUno/>
+src_filter = +<arduino/>
 lib_use = SPI,EEPROM
 lib_dfcyclic = True
 lib_install = 259
