New library ignores to make PlatformIO on windows skip certain libraries..

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,7 +43,7 @@ src_filter = +<arduino/>
 lib_use = SPI,EEPROM
 lib_dfcyclic = True
 lib_install = 259
-
+lib_ignore = GoosciBleGatt,ble_sdk_arduino_ID332,Nordic_nRF8001
 
 [env:uno]
 platform = atmelavr
@@ -53,3 +53,4 @@ src_filter = +<arduino/>
 lib_use = SPI,EEPROM
 lib_dfcyclic = True
 lib_install = 259
+lib_ignore = GoosciBleGatt,ble_sdk_arduino_ID332,Nordic_nRF8001
