--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,8 @@ lib_deps =
 	SPI
 	ble-sdk-arduino
 	Nanopb
+; force goosci for now, fix the circular dependency between GoosciBleGatt and goosci
+build_flags = !echo "-I$(pwd)/lib/goosci"
 
 [env:101]
 platform = intel_arc32
