Switch to @PlatformIO 3.0
Cross platform hook for circular dependency between GoosciBleGatt and goosci

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ lib_deps =
 	ble-sdk-arduino
 	Nanopb
 ; force goosci for now, fix the circular dependency between GoosciBleGatt and goosci
-build_flags = !echo "-I$(pwd)/lib/goosci"
+build_flags = -I$PROJECT_DIR/lib/goosci
 
 [env:101]
 platform = intel_arc32
