Pin nanopb @ 0.3.8-dev until we can test 0.3.9-dev

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ lib_deps =
 	EEPROM
 	SPI
 	ble-sdk-arduino
-	Nanopb
+	Nanopb@0.3.8-dev
 ; force goosci for now, fix the circular dependency between GoosciBleGatt and goosci
 build_flags = -I$PROJECT_DIR/lib/goosci
 
@@ -25,7 +25,7 @@ platform = intel_arc32
 framework = arduino
 board = genuino101
 src_filter = +<arduino101/>
-lib_deps = Nanopb
+lib_deps = Nanopb@0.3.8-dev
 lib_ignore = GoosciBleGatt, BLEPeripheral
 
 [env:mega2560]
