--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
 	Nanopb@0.3.8-dev
 ; force goosci for now, fix the circular dependency between GoosciBleGatt and goosci
 build_flags = -I$PROJECT_DIR/lib/goosci
+lib_ldf_mode = 1
 
 [env:101]
 platform = intel_arc32
