--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ lib_deps =
 	EEPROM
 	SPI
 	ble-sdk-arduino
-	Nanopb@0.3.8-dev
+	Nanopb@0.3.7
 ; force goosci for now, fix the circular dependency between GoosciBleGatt and goosci
 build_flags = -I$PROJECT_DIR/lib/goosci
 lib_ldf_mode = 1
@@ -26,7 +26,7 @@ platform = intel_arc32
 framework = arduino
 board = genuino101
 src_filter = +<arduino101/>
-lib_deps = Nanopb@0.3.8-dev
+lib_deps = Nanopb@0.3.7
 lib_ignore = GoosciBleGatt, BLEPeripheral
 
 [env:mega2560]
