--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ build_flags = -I$PROJECT_DIR/lib/goosci
 lib_ldf_mode = 1
 
 [env:101]
-platform = intel_arc32
+platform = intel_arc32@1.2.0
 framework = arduino
 board = genuino101
 src_filter = +<arduino101/>
