Initial library structure

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
-name=goosci
+name=Goosci
 version=0.0.2
 author=David Konerding <dek@google.com>, Uriah Welcome <uriah@google.com>
 maintainer=Uriah Welcome <uriah@google.com>
 sentence=A library for sending BLE messages to the Science Journal (https://sciencejournal.withgoogle.com/) mobile application.
-paragraph=Supports sending ADC readings via BLE to the Science Journal application. Requires Nanopb version 0.3.7 (https://github.com/nanopb/nanopb/releases/tag/0.3.7)
+paragraph=Supports sending ADC readings via BLE to the Science Journal application.
 category=Communication
 url=https://sciencejournal.withgoogle.com/
-architectures=arc32
+architectures=arc32,samd
+includes=Goosci.h
